# demetra

./: .gitignore  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
docs/: LICENSE  mkdocs.yml  pyproject.toml
docs/docs/: firmware.md  index.md
docs/docs/build_guide/: assembly.md  enclosure.md  pcb.md  setup.md  what_you_need.md
docs/docs/stylesheets/: extra.css
firmware/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.sim  build.rs  sim-entrypoint.sh
firmware/.cargo/: config.toml
firmware/chip/: Cargo.toml  partition_table.csv
firmware/chip/.cargo/: config.toml
firmware/chip/src/: comms_test.rs  esp_ui_backend.rs  hardware_peripherals.rs  main.rs  tasks.rs
firmware/chip/src/hardware_peripherals/: display.rs  esp_treatment_controller.rs  sensors_1_0_0.rs  storage.rs  type_aliases.rs
firmware/config/: config.toml
firmware/lib/: Cargo.toml  build.rs
firmware/lib/.cargo/: config.toml
firmware/lib/src/: config.rs  lib.rs  peripherals.rs  state.rs  storage.rs  tasks.rs  ui_backend.rs  ui_types.rs  units.rs
firmware/lib/src/config/: calibration.rs  device_config.rs  outlet_schedule.rs
firmware/lib/src/config/calibration/: conductivity.rs  orp.rs  ph.rs  pump.rs  types.rs
firmware/lib/src/logging/: mod.rs  storage.rs
firmware/lib/src/peripherals/: cic_filter.rs  dosing.rs  outlets.rs  pumps.rs  rtc.rs  sensors.rs
firmware/lib/src/storage/: device_config.rs  ring_buffer.rs
firmware/lib/src/ui_backend/: callbacks.rs  chart.rs  state.rs  ui_runner.rs
firmware/lib/src/ui_backend/actions/: device.rs  mod.rs  outlet.rs  pump.rs  sensor.rs
firmware/lib/src/ui_backend/callbacks/: numeric_keypad.rs
firmware/lib/src/units/: conductivity.rs  resistance.rs  temperature.rs  voltage.rs  volume.rs
firmware/lib/ui/: clock-display.slint  colors.slint  config-display.slint  log-display.slint  main.slint  outlet-display.slint  pump-display.slint  status-display.slint
firmware/lib/ui/components/: alphabetical_keypad.slint  numeric-selector.slint  numeric_keypad.slint  range-config-modal.slint  selector_modal.slint  sensor-action-modal.slint  sensor-measurement-modal.slint  status-bar.slint  touch-picker.slint
firmware/lib/ui/config-tab/: date-setting-modal.slint  tank-size-modal.slint  time-setting-modal.slint  unit-selector-modal.slint
firmware/lib/ui/outlets/: outlet-modal.slint  run-window-edit.slint  schedule-delete-confirmation.slint  schedule-display.slint  schedule-menu-modal.slint
firmware/lib/ui/pumps/: dosing-pump-modal.slint  pump-calibration-workflow.slint  treatment-solution-modal.slint
firmware/lib/ui/sensors/: orp.slint  ph.slint
firmware/lib/ui/sensors/calibration/: ec-calibration.slint  orp-calibration.slint
firmware/lib/ui/state/: enums.slint  navigation.slint  state.slint  workflow-state.slint
firmware/simulation/: Cargo.toml
firmware/simulation/.cargo/: config.toml
firmware/simulation/src/: display.rs  main.rs  mocks.rs  storage.rs
hardware/motherboard/: amc3336.kicad_sch  bom.csv  dose_1.kicad_sch  external_adc.kicad_sch  external_interface.kicad_sch  fp-lib-table  hydro_rev_1_side_esp.kicad_prl  mechanical.kicad_sch  orp.kicad_sch  outlet_1.kicad_sch  pcb.cad  pcb.csv  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  ph.kicad_sch  power.kicad_sch  sensors.kicad_sch  sym-lib-table
hardware/motherboard/components/: 4DIR1400H.kicad_sym  696101000002.step  ADS131M02.kicad_sym  Project_Components.kicad_sym  TPT7720F-SO1R.kicad_sym
hardware/motherboard/components/Project_Components_footprints.pretty/: 696101000002.kicad_mod  82153C.kicad_mod  BNC.kicad_mod  CUI_TBP01R1-508-02BE.kicad_mod  CUI_TBP02R1-381-02BE.kicad_mod  CUI_TBP03R1-350-02BE.kicad_mod  CUI_TBP03R1-350-03BE.kicad_mod  CUI_TBP03R1-350-04BE.kicad_mod  ESP32-S3-WROOM-1-larger-vias.kicad_mod  FFC2B35-14-G_REVA2.step  FUSE_0PTF0078P_LTF.kicad_mod  FUSE_0PTF0078P_LTF.step  GCT_FFC2B35-14-G_REVA2.kicad_mod  GCT_USB3140-30-0230-1-C_REVE1.kicad_mod  IND_VLS5045EX-4R7M.kicad_mod  IND_VLS6045EX-470M.kicad_mod  USB3140-30-0230-1-C_REVE1.step
