[package]
name = "chip"
version = "0.1.0"
authors = ["alex"]
edition = "2021"
rust-version = "1.93"
default-run = "chip"
resolver = "2"


[[bin]]
name = "chip"
test = true
path = "src/main.rs"


[features]
default = ["embassy"]


pio = []
std = ["alloc"]
alloc = []
nightly = []
experimental = []
embassy = []

[build-dependencies]

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
async-trait = "0.1.83"
bme280 = "0.5.1"
bytemuck = "1.24.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde", "alloc"] }
critical-section = "1.2.0"
defmt = "0.3.8"
embassy-embedded-hal = "0.5.0"
embassy-executor   = { version = "=0.9.1", features = ["executor-thread"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = "=0.7.2"
embassy-time = "=0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-storage = "0.3.1"
esp-alloc = { version = "0.9.0", features = ["internal-heap-stats"] }
esp-backtrace = { version = "=0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "=0.4.0", features = ["esp32s3", "validation", "log-04"] }
esp-config = "=0.6.1"
esp-hal = { version = "=1.0.0", features = ["esp32s3", "psram", "unstable"] }
esp-metadata-generated = { version = "^0.3.0", features = ["esp32s3"] }
esp-println = { version = "^0.16.0", features = ["log-04", "esp32s3"] }
esp-rtos = { version = "=0.2.0", features = ["esp32s3", "embassy"] }
esp-storage = { version = "=0.8.0", features = ["esp32s3"] }
ft6336u-driver = "1.0.0"
ft6x36 = "0.6.2"
lcd-async = "0.1.1"
lib = { path = "../lib", features = ["esp32s3"] }
log = "0.4.25"
port-expander = "0.6.5"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.121", default-features = false, features = ["alloc"] }
slint = { version = "1.15.1", default-features = false, features = ["compat-1-2", "libm", "unsafe-single-threaded", "renderer-software"] }
static_cell = "2.1.1"

[dev-dependencies]
