[package]
name = "lib"
version = "0.1.0"
authors = ["alex"]
edition = "2021"
rust-version = "1.88"
resolver = "2"

[features]
pio = []
alloc = []
nightly = []
experimental = []
embassy = []
esp32s3 = [
    "slint/renderer-software",
]
emulation = [
    "embassy-time/std",
    "embassy-time/generic-queue-16",
    "slint/std",
    # "slint/renderer-skia",
    # "slint/backend-winit",
]
simulation = [
    "embassy-time/std",
    "embassy-time/generic-queue-16",
    "slint/backend-winit",
    "slint/renderer-software",
    "slint/std",
    "critical-section/std",
]

[dependencies]
ads1x1x = "0.3.0"
bytemuck = "1.24.0"
cfg-if = "1.0.3"
crc32fast = { version = "1", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["serde", "alloc"] }
chrono-tz = { version = "0.10", default-features = false, features = ["serde", "filter-by-regex"] }
critical-section = "1.2.0"
defmt = "0.3.8"
embassy-futures = "0.1.0"
embassy-sync = "=0.7.2"
embassy-time = "=0.5.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-charts = { version = "0.3", default-features = false, features = ["no_std", "line", "floating-point"] }
embedded-storage = "0.3.1"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
libm = "0.2.8"
log = "0.4.25"
mcp794xx = "0.4.0"
nb = "1.1.0"
serde = { version = "1.0.204", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.121", default-features = false, features = ["alloc"] }
slint = { version = "1.15.1", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "serde", "renderer-software"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
thiserror = { version = "2.0", default-features = false }

[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
critical-section = { version = "1.2.0", features = ["std"] }
rstest = "0.26.1"
i-slint-backend-testing = "1.15.1"
proptest = "1.6"
proptest-derive = "0.5"
