[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib", features = ["simulation"] }
slint = { version = "1.15.1", default-features = false, features = ["backend-winit", "renderer-software"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sdl2 = { version = "0.37.0" }
embassy-sync = "0.7.2"
embassy-time = "=0.5.0"
